# test-agent

./: README.md  pyproject.toml  run_local_demo.py
hf_benchmark_agent/: __init__.py  agent.py  cli.py  scheduler.py  telegram_bot.py
retail_a2a/: __init__.py  agents.py  llm_client.py  models.py  server.py
tests/: test_agent.py  test_scheduler.py  test_telegram_bot.py
