[project]
name = "hf-benchmark-mcp-agent"
version = "0.1.0"
description = "MCP-based agent that maps text requests to HF benchmark top models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.0",
  "mcp>=1.19.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hf_benchmark_agent*"]
